# fastgeoapi

./: .cookiecutter.json  .dockerignore  .env  .flyio.env  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .safety-project.ini  .spectral.oas3.yaml  .spectral.owasp-top.10.yaml  .spectral.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.flyio  LICENSE  README.md  cli.py  contributing.md.tmp  example-config.yml  example-openapi.yml  fly.toml  index.html  mkdocs.yml  noxfile.py  objects.inv  pygeoapi-config.yml  pygeoapi-openapi.json  pygeoapi-openapi.yml  pyproject.toml  reference.md.tmp  renovate.json  ruff.toml  schemathesis.toml  uv.md
.github/: requirements-docs.txt
.github/workflows/: constraints.txt  contract-tests.yml  docs.yml  fly-deploy.yml  labeler.yml  ogc-openapi-validation.yml  openapi.yml  release.yml  tests.yml  zap-scan.yml
.swm/: developer-onbording.xa593.pl.sw.md  swimm.json
app/: __init__.py  cli.py  main.py
app/auth/: auth_interface.py  auth_jwks.py  exceptions.py  mcp_auth_provider.py  models.py  oauth2.py  oidc.py
app/config/: app.py  auth.py  logging.py
app/interfaces/: __init__.py  conformance.py  http_client.py
app/middleware/: oauth2.py  oidc.py  proxy.py  pygeoapi.py
app/pygeoapi/: __init__.py  models.py  openapi.py  starlette_app.py
app/pygeoapi/api/: __init__.py  conformance.py  processes.py
app/schemas/: logging.py
app/utils/: app_exceptions.py  get_list_of_app_exceptions_for_frontend.py  openapi_generator.py  openapi_resolver.py  pygeoapi_exceptions.py  pygeoapi_utils.py  request_exceptions.py  service_result.py
diagrams/excalidraw/: fastapi_architecture.excalidraw
docs/: contributing.md  getting-started.md  howto-guides.md  index.md  license.md.tmp  mcp-server.md  openapi.md  pygeoapi-openapi.json  reference.md  tutorials.md  usage.md
docs/diagrams/excalidraw/: fastapi_architecture
docs/stylesheets/: extra.css
getting-started/: index.html
howto-guides/: index.html
mcp-server/: index.html
openapi/: index.html  swagger-4209cbce.html  swagger-abc75844.html  swagger-af46c58a.html  swagger-d1de77a5.html  swagger-e417d672.html
scripts/docker/: build.py
scripts/iam/: .env  README.md  docker-compose.custom.yml  docker-compose.yml
scripts/iam/keycloak/: realm-export.json
scripts/iam/keycloak/imports/: Dockerfile.custom  realm-export.json
scripts/iam/policy/: auth.rego
scripts/postman/: PYGEOAPI.postman_collection.json  PYGEOAPI.postman_collection_v2.json  postman.sample.env
search/: search_index.json
src/fastgeoapi/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  test_cli.py  test_config_pydantic.py  test_conformance.py  test_http_client_lifecycle.py  test_jwks_token_validation.py  test_main.py  test_mcp_asgi_transport.py  test_mcp_internal_auth_bypass.py  test_mcp_oauth_components.py  test_mcp_oauth_e2e.py  test_mcp_remote_oauth_flow.py  test_mcp_stateless.py  test_mcp_trailing_slash.py  test_middlewares.py  test_oauth2_integration.py  test_opa_integration.py  test_openapi_contract.py  test_openapi_resolver.py  test_startup_workflow.py
tests/data/: ne_110m_lakes.geojson
tutorials/: index.html
