[project]
name = "fastgeoapi"
version = "0.0.3"
description = "fastgeoapi"
authors = [{ name = "Francesco Bartoli", email = "francesco.bartoli@geobeyond.it" }]
maintainers = [{ name = "Youssef Harby", email = "youssef.harby@geobeyond.it" }]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = "MIT"
classifiers = ["Development Status :: 1 - Planning"]
dependencies = [
    "mangum>=0.19,<1.0",
    "loguru>=0.7.3,<1.0",
    "fastapi-opa>=2.0.3,<3",
    "rasterio>=1.4.3,<2",
    "pygeoapi @ git+https://github.com/geopython/pygeoapi.git@master",
    "fastapi[standard]>=0.115.12,<1.0",
    "typer>=0.15.3,<0.16",
    "fastapi-key-auth>=0.15.4,<0.16.0",
    "sqlalchemy>=2.0.40,<2.1",
    "geoalchemy2>=0.17.1,<0.18",
    "shapely>=2.0,<3",
    "psycopg2-binary>=2.9.10,<3",
    "openapi-pydantic>=0.5.1,<=1.0",
    "pygeofilter",
    "pydantic-settings>=2.9.1,<3",
    "authlib>=1.5.2,<2",
    "cachetools>=5.5.2,<6",
    "fencer",
    "json-ref-dict>=0.7.2,<=1.0",
    "pyyaml>=6.0.2,<7",
    "scalar-fastapi>=1.4.3,<2",
]

[project.urls]
Homepage = "https://github.com/geobeyond/fastgeoapi"
Repository = "https://github.com/geobeyond/fastgeoapi"
Documentation = "https://fastgeoapi.readthedocs.io"
Changelog = "https://github.com/geobeyond/fastgeoapi/releases"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
fastgeoapi = "cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "coverage[toml]>=6.5.0,<7",
    "typeguard>=4.0.0,<5",
    "xdoctest[colors]>=0.15.10,<0.16",
    "pre-commit>=2.21.0,<3",
    "black>=24.4.2,<25",
    "flake8-bandit>=4.1.1,<5",
    "flake8-bugbear>=21.11.29,<22",
    "flake8-docstrings>=1.7.0,<2",
    "flake8-rst-docstrings>=0.2.7,<0.3",
    "pep8-naming>=0.12.1,<0.13",
    "darglint>=1.8.1,<2",
    "pre-commit-hooks>=4.0.1,<5",
    "pyupgrade>=3.3.1,<4",
    "termynal>=0.12.0,<0.13",
    "mkdocs>=1.6.0,<2",
    "mkdocs-material>=9.6.2,<10",
    "mkdocs-material-extras>=0.0.8,<0.0.9",
    "mkdocs-material-extensions>=1.1.1,<2",
    "mkdocs-swagger-ui-tag>=0.6.8,<0.7",
    "bandit>=1.7.5,<2",
    "ipython<8.12",
    "safety<2.0",
    "mypy>=1.10.0,<2",
    "commitizen>=3.24.0,<4",
    "openapi-resolver>=0.0.6,<0.0.7",
    "schemathesis>=3.39.0,<4.0",
    "mkdocs-typer>=0.0.3,<0.0.4",
    "pytest-asyncio>=0.24.0,<0.25",
]

[tool.uv]

[tool.uv.sources]
pygeoapi = { git = "https://github.com/geopython/pygeoapi.git", branch = "master" }
pygeofilter = { git = "https://github.com/geopython/pygeofilter.git", tag = "v0.3.1" }
fencer = { git = "https://github.com/abunuwas/fencer.git", branch = "main" }

[tool.hatch.build.targets.sdist]
include = [
    "./cli.py",
    "app",
    "app/**/*.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "./cli.py",
    "app",
    "app/**/*.py",
]

[tool.hatch.build.targets.wheel.sources]
"./cli.py" = "cli.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.paths]
source = [".", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["fastgeoapi", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
exclude = ".venv"
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
